--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,31 @@
     <script src="js/html5.js"></script>
     <![endif]-->
 
-  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="src/js/scripts.js" type="text/javascript"></script>
-  <script src="src/js/garlic.min.js" type="text/javascript"></script>
 
   <script src="https://use.typekit.net/mbe8zfp.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-  <!-- Favicon and Feed -->
-  <link rel="shortcut icon" type="image/png" href="/favicon.png">
+  <!-- Favicon -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/apps/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/apps/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/apps/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/apps/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/apps/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/apps/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/apps/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/apps/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apps/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/apps/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/apps/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/apps/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/apps/favicon-16x16.png">
+  <link rel="manifest" href="img/apps/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/apps/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
 
 </head>
@@ -44,38 +57,39 @@
       <form data-persist="garlic">
         <ul>
           <li>
-            <input name="input_5.1" type="checkbox" value="Meditate" id="Meditate" tabindex="2">
+            <input name="input_5.1" type="checkbox" value="Meditate" id="Meditate" tabindex="2" class="r">
             <label for="Meditate" id="label_Meditate">Meditate</label>
           </li>
           <li>
-            <input name="input_5.2" type="checkbox" value="Jumping Jacks" id="JumpingJacks" tabindex="3">
+            <input name="input_5.2" type="checkbox" value="Jumping Jacks" id="JumpingJacks" tabindex="3" class="r">
             <label for="JumpingJacks" id="label_JumpingJacks">Jumping Jacks</label>
           </li>
           <li>
-            <input name="input_5.3" type="checkbox" value="Pushups" id="Pushups" tabindex="4">
+            <input name="input_5.3" type="checkbox" value="Pushups" id="Pushups" tabindex="4" class="r">
             <label for="Pushups" id="label_Pushups">Pushups</label>
           </li>
           <li>
-            <input name="input_5.4" type="checkbox" value="Clarity" id="Clarity" tabindex="5">
+            <input name="input_5.4" type="checkbox" value="Clarity" id="Clarity" tabindex="5" class="r">
             <label for="Clarity" id="label_Clarity">Clarity</label>
           </li>
           <li>
-            <input name="input_5.5" type="checkbox" value="Stretch" id="Stretch" tabindex="6">
+            <input name="input_5.5" type="checkbox" value="Stretch" id="Stretch" tabindex="6" class="r">
             <label for="Stretch" id="label_Stretch">Stretch</label>
           </li>
           <li>
-            <input name="input_5.6" type="checkbox" value="Read" id="Read" tabindex="7">
+            <input name="input_5.6" type="checkbox" value="Read" id="Read" tabindex="7" class="r">
             <label for="Read" id="label_Read">Read</label>
           </li>
           <li>
-            <input name="input_5.7" type="checkbox" value="Hydrate" id="Hydrate" tabindex="8">
+            <input name="input_5.7" type="checkbox" value="Hydrate" id="Hydrate" tabindex="8" class="r">
             <label for="Hydrate" id="label_Hydrate">Hydrate</label>
           </li>
           <li>
-            <input name="input_5.8" type="checkbox" value="Gratitude" id="Gratitude" tabindex="9">
+            <input name="input_5.8" type="checkbox" value="Gratitude" id="Gratitude" tabindex="9" class="r">
             <label for="Gratitude" id="label_Gratitude">Gratitude</label>
           </li>
         </ul>
+        <input type="reset" class="reset" value="&#8634;" />
       </form>
     </div>
   </article>
@@ -88,6 +102,11 @@
     </article>
   </div>
 </section>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="js/fastclick.js" type="text/javascript"></script>
+<script src="js/garlic.min.js" type="text/javascript"></script>
+<script src="js/scripts.js" type="text/javascript"></script>
 
 </body>
 </html>
