Removed hydrate and combined pushups and jumping jacks into activity.

--- a/src/index.html
+++ b/src/index.html
@@ -61,12 +61,8 @@
             <label for="Meditate" id="label_Meditate">Meditate</label>
           </li>
           <li>
-            <input name="input_5.2" type="checkbox" value="Jumping Jacks" id="JumpingJacks" tabindex="3" class="r">
-            <label for="JumpingJacks" id="label_JumpingJacks">Jumping Jacks</label>
-          </li>
-          <li>
-            <input name="input_5.3" type="checkbox" value="Pushups" id="Pushups" tabindex="4" class="r">
-            <label for="Pushups" id="label_Pushups">Pushups</label>
+            <input name="input_5.2" type="checkbox" value="Activity" id="Activity" tabindex="3" class="r">
+            <label for="Activity" id="label_Activity">Activity</label>
           </li>
           <li>
             <input name="input_5.4" type="checkbox" value="Clarity" id="Clarity" tabindex="5" class="r">
@@ -79,10 +75,6 @@
           <li>
             <input name="input_5.6" type="checkbox" value="Read" id="Read" tabindex="7" class="r">
             <label for="Read" id="label_Read">Read</label>
-          </li>
-          <li>
-            <input name="input_5.7" type="checkbox" value="Hydrate" id="Hydrate" tabindex="8" class="r">
-            <label for="Hydrate" id="label_Hydrate">Hydrate</label>
           </li>
           <li>
             <input name="input_5.8" type="checkbox" value="Gratitude" id="Gratitude" tabindex="9" class="r">
