Back to the basics, baby

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <!-- <base href="http://base-url-goes-here.com/" /> -->
   <head>
     <meta charset="">
-    <title>- W E E K D A Z E - </title>
+    <title>-D-</title>
     <!--[if lt IE 9]>
     <script src="js/html5.js"></script>
     <![endif]-->
@@ -46,8 +46,9 @@
 
 <header>
   <nav>
-    <a href="#top" id="logo"><h1>WEEKDAZE</h1></a>
-    <a href="#about" class="about-button">?</a>
+    <h1>DAZE</h1>
+    <a href="#about" class="about-button"><span>?</span></a>
+    <a href="#top" class="top-button"><span>&#8679;</span></a>
   </nav>
 </header>
 
@@ -57,28 +58,28 @@
       <form data-persist="garlic">
         <ul>
           <li>
-            <input name="input_5.1" type="checkbox" value="Meditate" id="Meditate" tabindex="2" class="r">
+            <input name="input_5.1" type="checkbox" value="Meditate" id="Meditate" tabindex="1" class="r">
             <label for="Meditate" id="label_Meditate">Meditate</label>
           </li>
           <li>
-            <input name="input_5.2" type="checkbox" value="Activity" id="Activity" tabindex="3" class="r">
-            <label for="Activity" id="label_Activity">Activity</label>
+            <input name="input_5.2" type="checkbox" value="Jacks" id="Jacks" tabindex="3" class="r">
+            <label for="Jacks" id="label_Jacks">Cardio</label>
           </li>
           <li>
-            <input name="input_5.4" type="checkbox" value="Clarity" id="Clarity" tabindex="5" class="r">
-            <label for="Clarity" id="label_Clarity">Clarity</label>
+            <input name="input_5.3" type="checkbox" value="Ups" id="Ups" tabindex="2" class="r">
+            <label for="Ups" id="label_Ups">Push-ups</label>
           </li>
           <li>
-            <input name="input_5.5" type="checkbox" value="Stretch" id="Stretch" tabindex="6" class="r">
+            <input name="input_5.4" type="checkbox" value="Journal" id="Journal" tabindex="4" class="r">
+            <label for="Journal" id="label_Journal">Journal</label>
+          </li>
+          <li>
+            <input name="input_5.4" type="checkbox" value="Stretch" id="Stretch" tabindex="4" class="r">
             <label for="Stretch" id="label_Stretch">Stretch</label>
           </li>
           <li>
-            <input name="input_5.6" type="checkbox" value="Read" id="Read" tabindex="7" class="r">
+            <input name="input_5.5" type="checkbox" value="Read" id="Read" tabindex="5" class="r">
             <label for="Read" id="label_Read">Read</label>
-          </li>
-          <li>
-            <input name="input_5.8" type="checkbox" value="Gratitude" id="Gratitude" tabindex="9" class="r">
-            <label for="Gratitude" id="label_Gratitude">Gratitude</label>
           </li>
         </ul>
       </form>
@@ -89,7 +90,7 @@
 <section id="about">
   <div class="vBlock">
     <article>
-      <p>Weekdaze is a simple daily activity tracker designed to help stay focused on a grounded, self-aware and positive lifestyle.</p>
+      <p>Daze is a simple daily activity tracker designed to help focus on a grounded, self-aware and positive lifestyle.</p>
     </article>
   </div>
 </section>
