--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,11 @@
   <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
 
 </head>
-<body>
+<body id="top">
 
 <header>
   <nav>
-    <h1>DAZE</h1>
+    <h1><a href="#top">DAZE</a></h1>
     <a href="#about" class="about-button"><span>?</span></a>
     <a href="#top" class="top-button"><span>&#8679;</span></a>
   </nav>
