--- a/src/index.html
+++ b/src/index.html
@@ -21,22 +21,24 @@
   <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-icon" sizes="57x57" href="img/apps/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="img/apps/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/apps/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="img/apps/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/apps/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="img/apps/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="img/apps/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="img/apps/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/apps/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="img/apps/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/apps/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/apps/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/apps/favicon-16x16.png">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="img/apps/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/apps/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/apps/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/apps/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/apps/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/apps/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/apps/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/apps/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apps/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="img/apps/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="img/apps/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="img/apps/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="img/apps/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="img/apps/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="img/apps/ms-icon-144x144.png">
+  <link rel="mask-icon" href="img/apps/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="img/apps/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
   <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
@@ -46,9 +48,8 @@
 
 <header>
   <nav>
-    <h1><a href="#top">DAZE</a></h1>
-    <a href="#about" class="about-button"><span>?</span></a>
-    <a href="#top" class="top-button"><span>&#8679;</span></a>
+    <a href="#top"><h1>DAZE</h1></a>
+    <a href="#about" class="about-button"><span>&#9787;</span></a>
   </nav>
 </header>
 
@@ -90,7 +91,7 @@
 <section id="about">
   <div class="vBlock">
     <article>
-      <p>Daze is a simple daily activity tracker designed to help focus on a grounded, self-aware and positive lifestyle.</p>
+      <p>DAZE is a simple daily activity tracker designed to help focus on a grounded, self-aware and positive lifestyle.</p>
     </article>
   </div>
 </section>
