--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <!-- <base href="http://base-url-goes-here.com/" /> -->
   <head>
     <meta charset="">
-    <title>-D-</title>
+    <title>- D A Z E -</title>
     <!--[if lt IE 9]>
     <script src="js/html5.js"></script>
     <![endif]-->
