Cleaned up the about button, about content and updated the ready.

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 <section id="about">
   <div class="vBlock">
     <article>
-      <p>DAZE is a simple daily activity tracker designed to help focus on a grounded, self-aware and positive lifestyle.</p>
+      <p>DAZE is a simple list of daily activities to help focus on a grounded, self-aware and positive lifestyle.</p>
     </article>
   </div>
 </section>
