Updated some text

--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,8 @@
             <label for="Ups" id="label_Ups">Push-ups</label>
           </li>
           <li>
-            <input name="input_5.4" type="checkbox" value="Journal" id="Journal" tabindex="4" class="r">
-            <label for="Journal" id="label_Journal">Journal</label>
+            <input name="input_5.4" type="checkbox" value="Doodle" id="Doodle" tabindex="4" class="r">
+            <label for="Doodle" id="label_Doodle">Doodle</label>
           </li>
           <li>
             <input name="input_5.4" type="checkbox" value="Stretch" id="Stretch" tabindex="4" class="r">
